--- a/part1.html
+++ b/part1.html
@@ -18,12 +18,21 @@
         type: Phaser.AUTO,
         width: 800,
         height: 600,
+        physics: {
+            default: 'arcade',
+            arcade: {
+                gravity: { y: 300 },
+                debug: false
+            }
+        },
         scene: {
             preload: preload,
             create: create,
             update: update
         }
     };
+
+    var platforms;
 
     var game = new Phaser.Game(config);
 
@@ -39,6 +48,14 @@
     function create ()
     {
         this.add.image(400, 300, 'sky');
+
+        platforms = this.physics.add.staticGroup();
+
+        platforms.create(400, 568, 'ground').setScale(2).refreshBody();
+
+        platforms.create(600, 400, 'ground');
+        platforms.create(50, 250, 'ground');
+        platforms.create(750, 220, 'ground');
     }
 
     function update ()
